# XrayDB

./: .gitignore  .travis.yml  LICENSE  README.md  biblio.html  dbschema.html  examples.html  genindex.html  index.html  installation.html  objects.inv  overview.html  periodictable.html  py-modindex.html  python.html  search.html  searchindex.js  xraydb.schema
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml  test_install.yml
_sources/: dbschema.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  periodictable.rst.txt  python.rst.txt
_static/: documentation_options.js
data_sources/: Compton_energies.txt  README  calc_compton_energies.py  create_db.py  elemental_data.txt  generate_coreholewidths.py  get_schema.sh  ion_chamber_potentials.txt
doc/: Makefile  authorlist_format.py  biblio.rst  conf.py  dbschema.rst  examples.rst  index.rst  installation.rst  old_xraydb_rst.txt  overview.rst  periodictable.rst  python.rst  xraydb.bib
doc/_build/doctrees/: biblio.doctree  dbschema.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  python.doctree  xraydb.doctree
doc/_build/html/: .buildinfo  biblio.html  dbschema.html  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  python.html  search.html  searchindex.js  xraydb.html
doc/_build/html/_sources/: dbschema.txt  installation.txt  xraydb.txt
doc/_templates/: indexsidebar.html
doc/sphinx/ext/natbib/: __init__.py  latex_codec.py
poster/: COPYING  Makefile  README  atoms.tex  elines.tex  gen_atoms.py  header.tex  ptable.tex  ptable_no_gse.tex  ptable_seeslogo.tex  xray_table.tex  xray_table_36in_Barkla.tex  xray_table_36in_Curie.tex  xray_table_36in_Mendeleev.tex  xray_table_36in_Moseley.tex  xray_table_36in_SEES.tex  xray_table_50in_Barkla.tex  xray_table_50in_Mendeleev.tex  xray_table_50in_Moseley.tex  xray_table_50in_SEES.tex
python/: .gitattributes  LICENSE  MANIFEST.in  README  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/examples/: coated_mirror.py  darwin_rocking.py  darwin_widths.py  dev_testing.py  mirror_coated.py  mirror_comparison.py  mirror_multilayer.py  mu_calcite.py  mu_components_C.py  mu_components_Fe.py  mu_elements.py  mu_water.py  multilayer_mirror.py
python/tests/: test_chem_materials.py  test_xray.py  test_xraydb.py
python/xraydb/: __init__.py  _version.py  chemparser.py  materials.py  utils.py  version.py  xray.py  xraydb.py
