##
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

# note: this is needed, since the SCM root is '..'
[tool.setuptools_scm]
root = ".."
write_to = "python/xraydb/version.py"
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["xraydb"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--cov=xraydb --cov-report html"

[project]
name = "xraydb"
dynamic = ["version"]
requires-python = ">= 3.9"
description = "calculations with XrayDB: reference data for X-ray interactions with matter"
readme = "README.md"
authors = [
     {name = "Matthew Newville", email = "matt.newville@gmail.com"}
]
license = {file = "LICENSE"}
keywords = ["X-ray", "Physics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    ]

dependencies = [
    "numpy>=1.19",
    "scipy>=1.6",
    "sqlalchemy>=2.0.1",
    "platformdirs",
]

[project.urls]
Homepage = " https://github.com/xraypy/XrayDB"
Documentation = "https://xraydb.github.io/XrayDB/"
Tracker = "https://github.com/xraypy/XrayDB/issues"

[project.optional-dependencies]
dev = ["build", "twine"]
doc = ["Sphinx"]
test = ["pytest", "pytest-cov", "coverage"]
all = ["xraydb[dev, doc, test]"]
