[metadata]
version = 4.5.4
name = xraydb
description = X-ray Reference Data for the Elements using SQLite
long_description =

    xraydb provides reference data for X-ray interactions with
    matter and a python module with functions for working with
    these data. The data is assembled into an SQLite3 database
    xraydb.sqlite.

author = Matthew Newville
author_email = matt.newville@gmail.com
url = https://xraypy.github.io/XrayDB/
license = MIT License
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = X-ray
project_urls =
    Source =  https://github.com/xraypy/XrayDB
    Documentation = https://xraypy.github.io/XrayDB
    Tracker = https://github.com/xraypy/XrayDB/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
   numpy>=1.12
   scipy>=1.5
   sqlalchemy>=2.0.1
   platformdirs
   packaging

[options.extras_require]
doc =
    sphinx
test =
    pytest
